[package]
name = "nereond"
description = "Nereond is a configuration management daemon"
version = "0.3.0"
authors = ["John Hedges <john@drystone.co.uk>", "Ribose Inc. <open.source@ribose.com>"]
repository = "https://github.com/riboseinc/nereond"
license = "BSD-2-Clause"
exclude = [
    "ci/**",
    "examples/**",
    ".gitignore",
    "Jenkinsfile",
    ".travis.yml",
    ]

[dependencies]
base64 = "0.6"
libc = "0.2"
log = "0.4"
nereon = "0.4"
nereon_derive = "0.4"
stderrlog = "0.4"
